# sdl3quake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: engine.cmake  progs.cmake  toolchain-clang-wasm32.cmake
src/: GNUmakefile  adivtab.h  anorms.h  bspfile.h  cdaudio.c  cdaudio.h  chase.c  cl_demo.c  cl_input.c  cl_main.c  cl_parse.c  cl_tent.c  client.h  cmd.c  cmd.h  common.c  common.h  console.c  console.h  crc.c  crc.h  cvar.c  cvar.h  d_edge.c  d_fill.c  d_iface.h  d_ifacea.h  d_init.c  d_local.h  d_modech.c  d_part.c  d_polyse.c  d_scan.c  d_sky.c  d_sprite.c  d_surf.c  d_vars.c  d_zpoint.c  draw.c  draw.h  (+79 more)
src/progs/: defs.h  main.c
